--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,4 @@ env:
 script:
   - RAILS_ENV=test bundle exec rake --trace db:migrate test
 before_script:
-  - psql -c 'create database karaoke-songbird_test' -U postgres
+  - psql -c 'create database karaoke_songbird_test' -U postgres
