changed .travis.yml test to rspec

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,6 @@ rvm:
 env:
   - DB=postgresql
 script:
-  - RAILS_ENV=test bundle exec rake --trace db:migrate test
+  - RAILS_ENV=test bundle exec rake --trace db:migrate rspec
 before_script:
   - psql -c 'create database "karaoke-songbird_test"' -U postgres
