--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,6 @@ env:
   - DB=postgresql
 script:
   - RAILS_ENV=test bundle exec rake --trace db:migrate
+  - RAILS_ENV=test bundle exec rspec
 before_script:
   - psql -c 'create database "karaoke-songbird_test"' -U postgres
